--- a/src/views/latest_orders.html
+++ b/src/views/latest_orders.html
@@ -1,4 +1,34 @@
 <div>
-	here is the latest orders
+	<table class="table table-bordered">
+		<tr>
+			<th>Name</th>
+			<th>Email</th>
+			<th>Orders</th>
+			<th>Tel</th>
+			<th>Addrss</th>
+			<th>Order Time</th>
+			<th>Deliver Time</th>
+		</tr>
+
+		<tr ng-repeat='order in orders.items'>
+			<td>{{order.userInfo.username}}</td>
+			<td>{{order.userInfo.email}}</td>
+			<td>
+				<ul>
+					<li ng-repeat='product in order.products'>
+						<label>{{product.name}}</label> X {{product.quantity}} -- &pound;{{product.price * product.quantity}}
+					</li>
+				</ul>
+			</td>
+			<td>{{order.contact.tel}}</td>
+			<td>{{order.contact.address1}}, {{order.contact.address2}}, {{order.contact.city}}, {{order.contact.postcode}} </td>
+			<td>
+				<!-- {{(new Date(order.orderTime*1000)).toLocaleString()}} -->
+			</td>
+			<td>
+				<!-- {{(new Date(order.delieverTime*1000)).toLocaleString()}} -->
+			</td>
+		</tr>
+	</table>
 
 </div>
