--- a/style/main.css
+++ b/style/main.css
@@ -161,8 +161,7 @@
       float: right; }
 
 body > .container {
-  position: relative;
-  left: 35px; }
+  position: relative; }
 
 li {
   list-style: none; }
