--- a/style/main.scss
+++ b/style/main.scss
@@ -1,8 +1,10 @@
 @import "mixin.scss";
 @import "sass/menu.scss";
+@import "sass/login.scss";
 @import "sass/loader.scss";
 @import "sass/animations.scss";
 @import "sass/notification.scss";
+@import "sass/latestOrder.scss";
 
 body {
 	& > .container {
