--- a/src/views/latest_orders.html
+++ b/src/views/latest_orders.html
@@ -23,6 +23,8 @@
 		<div class="clearfix"></div>
 	</div>
 
+	<div class="btn btn-primary" ng-click="print()">Print</div>
+
 	<table class="table table-bordered">
 		<tr>
 			<th>Name</th>
